# morpheus

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONSTITUTION.md  CONTRIBUTING.md  EXECUTION_PLAN.md  LICENSE  PHILOSOPHY.md  README.md  package.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  module-request.md
.github/workflows/: ci.yml  release.yml
cli/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
cli/src/: index.ts
docs/: README.md  getting-started.md
docs/decisions/: ADR-001-monorepo-vs-multirepo.md  ADR-002-copier-vs-cookiecutter.md  ADR-003-branching-model.md  ADR-004-open-questions-v0.1.md
docs/for-authors/: prd-to-spec-walkthrough.md
docs/for-eng-managers/: escalation-paths.md  measuring-impact.md  rollout-guide.md
docs/for-engineers/: brownfield-walkthrough.md  new-project-walkthrough.md  updating-the-platform.md  writing-a-custom-skill.md
docs/for-explorers/: codebase-tour.md
docs/for-platform-maintainers/: adding-a-module.md  handling-breaking-changes.md  publishing-a-release.md
docs/for-stewards/: constitution-authoring.md
docs/for-verifiers/: holdout-authoring.md
scripts/: bootstrap.ps1  bootstrap.sh
tests/: README.md  helpers.mjs  run.mjs
tests/fixtures/brownfield-python/: README.md  pyproject.toml
tests/fixtures/brownfield-python/.github/workflows/: existing-ci.yml
tests/fixtures/seek-snapshot/: AGENTS.md  README.md  package.json  pyproject.toml
tests/fixtures/seek-snapshot/.github/: copilot-instructions.md
(+219 files in other folders)
